fix: overflowing profile card

--- a/src/app/common/components/app-bar/app-bar.component.scss
+++ b/src/app/common/components/app-bar/app-bar.component.scss
@@ -45,6 +45,11 @@ div.appBar {
             }
         }
 
+        #user_name {
+            max-width: 10rem;
+            @include ellipsis;
+        }
+
         @media only screen and (max-width: 686px) and (min-width: 420px) {
             #app_title_full {
                 display: initial;
