--- a/src/app/common/components/profile-card/profile-card.component.scss
+++ b/src/app/common/components/profile-card/profile-card.component.scss
@@ -53,6 +53,8 @@
 
         .profile-name {
             font-size: 1.2rem;
+            @include ellipsis;
+            max-width: 12rem;
         }
 
         .profile-icons {
